--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_settings">Settings Activity</string>
+    <string name="settings_account_info">Account Info</string>
+    <string name="settings_notifications">Notifications</string>
+    <string name="settings_camera">Camera</string>
+    <string name="settings_notes">Notes</string>
 </resources>
