Added CAB and multiselect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,6 @@
     <string name="about_header">ABOUT</string>
     <string name="about_support">Support</string>
     <string name="about_legal">Legal</string>
-
+    <string name="delete">Delete</string>
     <string name="welcome">Welcome</string>
 </resources>
