This commit will add functionality for new note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="register_button">Register</string>
     <string name="no_account_text">DON\'T HAVE AN ACCOUNT</string>
     <string name="or">or</string>
+    <string name="untitled_note">Untitled Text</string>
+
 </resources>
