--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,5 @@
     <string name="no_account_text">DON\'T HAVE AN ACCOUNT</string>
     <string name="or">or</string>
     <string name="untitled_note">Untitled Text</string>
-
+    <string name="alreday_have_an_account">Already have an account?</string>
 </resources>
