add info window to map and display all the notes on the map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="settings">Settings</string>
     <string name="title_activity_maps">Map</string>
     <string name="map_view">Map</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
